--- a/package.json
+++ b/package.json
@@ -11,14 +11,19 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^17.0.0",
+    "@angular/cdk": "^17.2.0",
     "@angular/common": "^17.0.0",
     "@angular/compiler": "^17.0.0",
     "@angular/core": "^17.0.0",
     "@angular/forms": "^17.0.0",
+    "@angular/material": "^17.2.0",
     "@angular/platform-browser": "^17.0.0",
     "@angular/platform-browser-dynamic": "^17.0.0",
     "@angular/router": "^17.0.0",
+    "ngx-bootstrap": "^12.0.0",
+    "primeng": "^17.7.0",
     "rxjs": "~7.8.0",
+    "swiper": "^11.0.6",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
   },
@@ -33,6 +38,8 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "sass": "^1.71.1",
+    "sass-loader": "^14.1.1",
     "typescript": "~5.2.2"
   }
 }
