--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "^17.0.0",
     "@angular/router": "^17.0.0",
     "ngx-bootstrap": "^12.0.0",
+    "primeicons": "^6.0.1",
     "primeng": "^17.7.0",
     "rxjs": "~7.8.0",
     "swiper": "^11.0.6",
